force-app/main/default/objects/Webhook_Secret__c/Webhook_Secret__c.object-meta.xml
<CustomObject>
    <description>One inbound webhook signing secret, keyed on the vendor&apos;s identifier for the webhook. Asana hands its secret over at runtime during the registration handshake, one per webhook, which rules out both of the usual homes: a Named Credential injects credentials on outbound calls and cannot hand a key to code that has to compute an HMAC itself, and Apex cannot write Custom Metadata synchronously. Private, no sharing rules, no sharing sets. The Secret__c field is readable by the integration owner only and deliberately not by the site guest - the code, not FLS, is what protects it on the guest path, because Apex runs in system mode.</description>
    <label>Webhook Secret</label>
    <nameField>
        <displayFormat>WS-{00000}</displayFormat>
        <label>Webhook Secret Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Secrets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>