force-app/main/default/objects/Webhook_Secret__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this secret is the one to verify against. A rotated secret is superseded rather than deleted, so the row that stopped working is still there to explain why deliveries began failing at a particular moment. An inactive row is never returned by the lookup.</description>
    <inlineHelpText>Clear this instead of deleting the row when a secret is rotated.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>