force-app/main/default/objects/Webhook_Secret__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>The shared signing secret, as the vendor sent it. Read into a local variable by WebhookSecretStore and handed to Crypto.verifyHMac; it exists nowhere else. Encrypted Text was tried first and cannot work here, measured rather than assumed: Apex returns an encrypted field masked unless the running user holds the View Encrypted Data USER PERMISSION, which system mode does not bypass the way it bypasses FLS. The user that must read this is the site guest, and a guest permission set silently cannot hold that permission - the deploy reports success and the org keeps it false. An encrypted field therefore hands the endpoint asterisks and every signature check fails closed, indistinguishable from a wrong secret. Protection here is OWD Private, field-level security granted to the integration owner alone, reports and search and streaming off, and above all the code: no @AuraEnabled method returns this field, it is never System.debug&apos;d, and it never reaches Integration_Log__c.</description>
    <inlineHelpText>Set by the registration handshake. Never paste this anywhere else, and never read it out of a log.</inlineHelpText>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>