force-app/main/default/objects/Webhook_Secret__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>System the webhook belongs to. Backed by the same External_System global value set as everything else, so the vocabulary cannot drift. One secret store, one verification pattern; the adapters differ only in how they compute the digest.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_System</valueSetName>
    </valueSet>
</CustomField>